--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="pk.nz.pinoyklasiks">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,6 +15,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- Add this so that the app can find searchable resourse -->
+            <meta-data android:name="android.app.searchable"
+                    android:resource="@xml/searchable"
+                />
+
+            <!-- Add this for searching for Activity -->
+            <intent-filter>
+             <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+         <meta-data
+             android:name="anddroid.app.default_searchable"
+             android:value=".MainActivity" />
+
         </activity>
     </application>
 
