--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pk.nz.pinoyklasiks">
 
-    //Get the permission for reading the phone number
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
 
     <application
 
@@ -13,19 +10,31 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ProductsActivity" />
+
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <abstractCategory android:name="android.intent.abstractCategory.LAUNCHER" />
             </intent-filter>
 
             <!-- Activity where we goint to search -->
-
             <meta-data android:name="android.app.default_searchable"
                 android:value=".activities.SearchResultsActivity"/>
-
         </activity>
+
+
+        <activity android:name=".activities.ListOfProductsActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <!-- Product Activity -->
+        <activity android:name=".activities.ProductActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
 
         <!-- Search Activity -->
         <activity android:name=".activities.SearchResultsActivity">
@@ -37,7 +46,7 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
-            <!-- Add this so that the app can find sea rchable resourse -->
+            <!-- Add this so that the app can find searchable resourse -->
 
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
