--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
                 android:value=".activities.SearchResultsActivity"/>
         </activity>
 
+        <activity android:name=".activities.CompleteOrderActivity" />
 
         <activity android:name=".activities.ListOfProductsActivity">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
@@ -66,7 +67,9 @@
 
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+        </activity>
+
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
