--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,61 +2,66 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pk.nz.pinoyklasiks">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <!-- Activity where we goint to search -->
-            <meta-data android:name="android.app.default_searchable"
-                android:value=".activities.SearchResultsActivity"/>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".activities.SearchResultsActivity" />
         </activity>
-
-        <activity android:name=".activities.CompleteOrderActivity" />
-
+        <activity android:name=".activities.CompleteOrderActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.SubOrderActivity" />
+        </activity>
         <activity android:name=".activities.ListOfProductsActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
 
         <!-- Product Activity -->
         <activity android:name=".activities.ProductActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
 
-    <!-- SubOrder Activity -->
+        <!-- SubOrder Activity -->
         <activity android:name=".activities.SubOrderActivity">
             <intent-filter android:label="Cart Pinoy Klasiks">
-                <!--action for open suborder -->
+
+                <!-- action for open suborder -->
                 <action android:name="pk.nz.pinoyklasiks.open_suborder" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
 
         <!-- Search Activity -->
         <activity android:name=".activities.SearchResultsActivity">
-
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
 
             <intent-filter>
@@ -65,19 +70,14 @@
 
             <!-- Add this so that the app can find searchable resourse -->
 
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
 
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <!-- End of Search Activity -->
+        <service android:name=".service.CheckStatusService" />
 
-
-
+        <activity android:name=".activities.OrderHistoryActivity"></activity>
     </application>
 
 </manifest>
